# binance-async-rs

./: .gitignore  Cargo.toml
examples/: endpoints.rs  new_endpoints.rs  ws.rs
src/: error.rs  lib.rs  transport.rs
src/client/: account.rs  general.rs  market.rs  mod.rs  userstream.rs  websocket.rs
src/model/: mod.rs  websocket.rs
src/tests/: mod.rs
tests/: ping.rs
