[package]
name = "binance-async"
version = "0.2.0"
edition = "2018"
license = "MIT OR Apache-2.0"
authors = [
    "Flavio Oliveira <flavio@wisespace.io>",
    "Weiyüen Wu <doomsplayer@gmail.com>",
    "Artem Vorotnikov <artem@vorotnikov.me>",
]

description = "Rust Library for the Binance API (Async)"
keywords = ["cryptocurrency", "trading", "binance", "async"]
documentation = "https://docs.rs/crate/binance-async"
repository = "https://github.com/dovahcrow/binance-async-rs"
readme = "README.md"

[badges]
travis-ci = { repository = "dovahcrow/binance-async-rs" }

[lib]
name = "binance_async"
path = "src/lib.rs"

[dependencies]
# tracing = "0.1.40"
tungstenite = "0.24.0"
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
url = "2.5.2"
log = "0.4"
env_logger = "0.11.5"
dotenv = "0.15.0"
futures = "0.3.31"
headers = "0.4.0"
http = "1.1.0"
maplit = "1.0.2"
once_cell = "1.20.2"
reqwest = { version = "0.12.8", features = ["json"] }
snafu = "0.8.5"
streamunordered = { git = "https://github.com/utx0/streamunordered" }
tokio = { version = "1.40.0", features = ["full"] }
thiserror = "1.0.64"
anyhow = "1.0.89"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
hex = "0.4.3"
sha2 = "0.10"
hmac = "0.12"

[dev-dependencies]
# csv = "1.3.0"
# tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = "0.3.18"
